# gnome-software

./: .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  meson.build  meson_options.txt
.devcontainer/: devcontainer.json
plugins/: meson.build
plugins/appimage/: gs-appimage-utils.c  gs-appimage-utils.h  gs-plugin-appimage.c  meson.build
plugins/dpkg/: gs-plugin-dpkg.c
